# guitar-tab-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  MIGRATION.md  README.md  RELEASE.md  tarpaulin-report.json  types.md  wasm_test.html
.github/workflows/: coverage.yml  rust.yml  rust_build_and_test.yml
.scratch/2.0.0-final-pass/: PRD.md  plan.md
.scratch/2.0.0-wasm-surface/: PRD.md  plan.md
benches/: benchmarks.rs  my_benchmark.rs
dev/: rayon-experiment-report.md
dev/unused-features-report/: report.html  report.json
docs/adr/: 0001-arrangement-set-opaque-handle.md  0002-tab-error-discriminated-union.md  0003-tsify-next-bindings.md  0004-tuning-name-camelcase-wire.md  0005-num-arrangements-newtype.md  0006-empty-input-returns-empty-set.md  0007-flat-taberror-variants.md  0008-tab-input-sealed-constructor.md  0009-pipeline-stays-single-threaded.md  0010-tsify-bindings.md  0011-difficulty-weights.md
docs/agents/: domain.md
examples/: advanced.rs  basic.rs  core_usage.rs  hello.rs  wasm.html
proptest-regressions/: arrangement.txt
src/: arrangement.rs  error.rs  guitar.rs  lib.rs  main.rs  parser.rs  pitch.rs  renderer.rs  string_number.rs
tests/: integration_public_surface.rs  wasm_boundary.rs
tests/snapshots/: wasm.d.ts
