[package]
name = "guitar-tab-generator"
version = "1.1.3"
edition = "2021"
authors = ["Noah Baculi <noahbaculi@gmail.com>"]
description = "Generate fingerstyle guitar tabs based on the difficulty of different finger positions"
readme = "README.md"
repository = "https://github.com/noahbaculi/guitar-tab-generator"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
average = { version = "0.16.0", features = ["rayon"] }
itertools = "0.14.0"
memoize = "0.5.1"
ordered-float = "5.0.0"
pathfinding = "4.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = "0.25.0"
strum_macros = "0.25.1"
wasm-bindgen = "0.2.100"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
