[package]
name = "guitar-tab-generator"
version = "2.0.0"
edition = "2024"
rust-version = "1.86"
authors = ["Noah Baculi <noahbaculi@gmail.com>"]
description = "Generate fingerstyle guitar tabs based on the difficulty of different finger positions"
readme = "README.md"
repository = "https://github.com/noahbaculi/guitar-tab-generator"
license = "GPL-3.0-only"
keywords = ["guitar", "tab", "music", "fingering", "wasm"]
categories = ["multimedia::audio", "wasm"]
documentation = "https://docs.rs/guitar-tab-generator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
average = { version = "0.16.0", features = ["rayon"] }
itertools = "0.14.0"
memoize = "0.6.0"
ordered-float = "5.1.0"
pathfinding = "4.14.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
tsify-next = { version = "0.5", features = ["js"] }
wasm-bindgen = "0.2.104"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
serde_json = "1"
wasm-bindgen-test = "0.3.72"

[[bench]]
name = "benchmarks"
harness = false
